--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "download-assets": "node scripts/download-assets.js"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.5",
     "next": "^15.1.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
