Add first name support and DownloadButton component
- Introduced NEXT_PUBLIC_FIRSTNAME environment variable for enhanced profile customization.
- Updated layout metadata to dynamically use profile name and bio from environment variables.
- Added DownloadButton component to allow users to download a vCard with contact information.
- Modified Home component to display first name and integrate the new DownloadButton, improving user interaction.

--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 # Profile Configuration
 NEXT_PUBLIC_PROFILE_NAME="Your Name"
+NEXT_PUBLIC_FIRSTNAME="Your First Name"
 NEXT_PUBLIC_PROFILE_BIO="Your bio or description"
 NEXT_PUBLIC_PROFILE_IMAGE="https://example.com/your-image.jpg"
 
