Add CV download functionality and update environment configuration

--- a/env.example
+++ b/env.example
@@ -8,6 +8,10 @@ NEXT_PUBLIC_PROFILE_IMAGE="https://example.com/your-image.jpg"
 NEXT_PUBLIC_CONTACT_EMAIL="your@email.com"
 NEXT_PUBLIC_WEBSITE_URL="https://yourwebsite.com"
 
+# CV/Resume Configuration
+# URL to your CV PDF file (hosted on a file sharing service)
+NEXT_PUBLIC_CV_PDF_URL="https://example.com/your-cv.pdf"
+
 # Contact Information (SVG URLs for anti-scraping)
 # Create SVG files with your contact details and host them somewhere
 NEXT_PUBLIC_CONTACT_NAME_SVG="https://example.com/contact-name.svg"
